--- a/Source/Makefile
+++ b/Source/Makefile
@@ -40,9 +40,11 @@ build_modules:
 ifeq ($(target), x86_i386)
 # Build the architecture module
 	@make -C $(SOURCE_DIR)/Arch target_board=x86 target_cpu=i386
+	@make -C $(SOURCE_DIR)/Core target_board=x86 target_cpu=i386
 else ifeq ($(target), x86_64)
 # Build the architecture module
 	@make -C $(SOURCE_DIR)/Arch target_board=x86 target_cpu=x86_64
+	@make -C $(SOURCE_DIR)/Core target_board=x86 target_cpu=x86_64
 else
 	@echo "\e[1m\e[31m\n=== ERROR: Unknown target $(target)\e[22m\e[39m"
 	@echo "Available targets: $(TARGET_LIST)\n"
@@ -83,11 +85,14 @@ clean:
 # Clean the architecture module
 ifeq ($(target), x86_i386)
 	@make -C $(SOURCE_DIR)/Arch target_board=x86 target_cpu=i386 clean
+	@make -C $(SOURCE_DIR)/Core target_board=x86 target_cpu=i386 clean
 else ifeq ($(target), x86_64)
 	@make -C $(SOURCE_DIR)/Arch target_board=x86 target_cpu=x86_64 clean
+	@make -C $(SOURCE_DIR)/Core target_board=x86 target_cpu=i386 clean
 else
 	@make -C $(SOURCE_DIR)/Arch target_board=x86 target_cpu=i386 clean
 	@make -C $(SOURCE_DIR)/Arch target_board=x86 target_cpu=x86_64 clean
+	@make -C $(SOURCE_DIR)/Core target_board=x86 target_cpu=i386 clean
 endif
 
 # Clean modules
