Multiple features added - Added Interrupt Management in i386 and x64 architectures - Added tracing capabilities - Added pseudo thread management

--- a/Source/Kernel/Libs/makefile
+++ b/Source/Kernel/Libs/makefile
@@ -20,14 +20,17 @@ init:
 build_modules:
 	@$(MAKE) -C ./libc
 	@$(MAKE) -C ./libapi
+	@$(MAKE) -C ./libtrace
 
 # Copy the generated libs
 	@cp ./libc/$(BIN_DIR)/liblibc.a $(BIN_DIR)/
 	@cp ./libapi/$(BIN_DIR)/libapi.a $(BIN_DIR)/
+	@cp ./libtrace/$(BIN_DIR)/libtrace.a $(BIN_DIR)/
 
 clean:
 	@$(MAKE) -C ./libc clean
 	@$(MAKE) -C ./libapi clean
+	@$(MAKE) -C ./libtrace clean
 
 	$(RM) -rf $(BIN_DIR)
 
