Added testing framework

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,40 +12,40 @@ addons:
             - mtools
             - libmount-dev
             - libselinux-dev
-            - build-essential 
-            - libtool 
-            - pkg-config 
+            - build-essential
+            - libtool
+            - pkg-config
             - intltool
-            - libglib2.0-dev 
-            - libfdt-dev 
-            - libpixman-1-dev 
-            - zlib1g-dev 
-            - libaio-dev 
-            - libbluetooth-dev 
-            - libbrlapi-dev 
-            - libbz2-dev  
-            - libcap-dev 
-            - libcap-ng-dev 
-            - libcurl4-gnutls-dev 
-            - libgtk-3-dev 
-            - libibverbs-dev 
-            - libjpeg8-dev 
-            - libncurses5-dev 
-            - libnuma-dev 
-            - librbd-dev 
-            - librdmacm-dev 
-            - libsasl2-dev 
-            - libsdl1.2-dev 
-            - libseccomp-dev 
-            - libsnappy-dev 
-            - libssh2-1-dev 
-            - libvde-dev 
-            - libvdeplug-dev 
-            - libxen-dev 
-            - liblzo2-dev 
-            - valgrind 
+            - libglib2.0-dev
+            - libfdt-dev
+            - libpixman-1-dev
+            - zlib1g-dev
+            - libaio-dev
+            - libbluetooth-dev
+            - libbrlapi-dev
+            - libbz2-dev
+            - libcap-dev
+            - libcap-ng-dev
+            - libcurl4-gnutls-dev
+            - libgtk-3-dev
+            - libibverbs-dev
+            - libjpeg8-dev
+            - libncurses5-dev
+            - libnuma-dev
+            - librbd-dev
+            - librdmacm-dev
+            - libsasl2-dev
+            - libsdl1.2-dev
+            - libseccomp-dev
+            - libsnappy-dev
+            - libssh2-1-dev
+            - libvde-dev
+            - libvdeplug-dev
+            - libxen-dev
+            - liblzo2-dev
+            - valgrind
             - xfslibs-dev
-            - libpulse-dev 
+            - libpulse-dev
             - libpulse0
             - grub-pc-bin
             - ninja-build
@@ -55,7 +55,7 @@ cache:
         - $HOME/qemu
 
 env:
-    - TRAVIS_ARCH=i386 QEMU_ARCHES=i386
+    - TRAVIS_ARCH=i386,x86_64 QEMU_ARCHES=i386,x86_64
 
 jobs:
   include:
@@ -71,5 +71,6 @@ before_script:
     - bash -e travis-qemu/travis-qemu.sh
     - export PATH=$PATH:$HOME/qemu/bin
     - qemu-system-i386 --version
+    - qemu-system-x64 --version
 
 script: ./.build-travis.sh
