--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "string.h": "c"
+        "string.h": "c",
+        "console.h": "c",
+        "stddef.h": "c",
+        "type_traits": "c"
     }
 }
