--- a/.github/workflows/github-action-qemu.yml
+++ b/.github/workflows/github-action-qemu.yml
@@ -5,8 +5,11 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+      - run: chmod +x ci-qemu/ci-qemu.sh
+      - run: bash -e ci-qemu/ci-qemu.sh
+      - run: export PATH=$PATH:$HOME/qemu/bin
+      - run: qemu-system-i386 --version
+      - run: qemu-system-x64 --version
 
       - run: echo "==> The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "==> This job is now running on a ${{ runner.os }}"
