--- a/.github/workflows/github-action-qemu.yml
+++ b/.github/workflows/github-action-qemu.yml
@@ -40,7 +40,7 @@ jobs:
       - run: echo $PATH
       - run: echo $GITHUB_PATH
       - run: qemu-system-i386 --version
-      - run: qemu-system-x64 --version
+      - run: qemu-system-x86_64 --version
 
 
       - run: echo "This job's status is ${{ job.status }}."
