--- a/.github/workflows/github-action-qemu.yml
+++ b/.github/workflows/github-action-qemu.yml
@@ -1,5 +1,5 @@
-name: nUTK CI Plan
-run-name: ${{ github.actor }} | nUtk Build and Testing
+name: UTK CI Plan
+run-name: ${{ github.actor }} | UTK Build and Testing
 on: [push]
 jobs:
   Explore-GitHub-Actions:
@@ -37,8 +37,6 @@ jobs:
         run: chmod +x Tools/CIWorkflow/ci-qemu.sh && bash -e Tools/CIWorkflow/ci-qemu.sh
 
       - run: echo "$HOME/qemu/bin" >> $GITHUB_PATH
-      - run: echo $PATH
-      - run: echo $GITHUB_PATH
       - run: qemu-system-i386 --version
       - run: qemu-system-x86_64 --version
 
