--- a/.github/workflows/github-action-qemu.yml
+++ b/.github/workflows/github-action-qemu.yml
@@ -52,4 +52,4 @@ jobs:
       - name: Unit Testing
         run: |
           cd Source
-          Tools/CIWorkflow/run_tests.sh
+          ../Tools/CIWorkflow/run_tests.sh
