--- a/.github/workflows/github-action-qemu.yml
+++ b/.github/workflows/github-action-qemu.yml
@@ -51,5 +51,5 @@ jobs:
           qemu-system-x86_64 --version
 
       - name: Unit Testing
-        run: python --version
+        run: Tools/CIWorkflow/run_tests.sh
         shell: bash
