--- a/.github/workflows/github-action-qemu.yml
+++ b/.github/workflows/github-action-qemu.yml
@@ -20,6 +20,10 @@ jobs:
           echo "$HOME/qemu/bin" >> $GITHUB_PATH
           chmod +x Tools/CIWorkflow/run_tests.sh
           chmod +x Tools/CIWorkflow/ci-qemu.sh
+        uses: egor-tensin/setup-gcc@v1
+        with:
+          version: latest
+          platform: x64
 
       - name: Cache Qemu
         id: cache-qemu
