--- a/.github/workflows/github-action-qemu.yml
+++ b/.github/workflows/github-action-qemu.yml
@@ -20,6 +20,8 @@ jobs:
           echo "$HOME/qemu/bin" >> $GITHUB_PATH
           chmod +x Tools/CIWorkflow/run_tests.sh
           chmod +x Tools/CIWorkflow/ci-qemu.sh
+
+      -name: GCC Update
         uses: egor-tensin/setup-gcc@v1
         with:
           version: latest
