--- a/Source/Config/Arch/x86_i386/x86_i386_fdt.dts
+++ b/Source/Config/Arch/x86_i386/x86_i386_fdt.dts
@@ -65,7 +65,7 @@
                 interrupts = <1 0>; /* 0: is IRQ; 1: IRQ line */
                 comm = <0x34 0x40>;
                 qartz-freq = <0x1234DD>;
-                freq = <100>;
+                freq = <500>;
                 freq-range = <20 8000>;
                 is-main;
             };
@@ -73,7 +73,7 @@
             rtc {
                 compatible = "x86,x86-rtc";
                 interrupt-parent = <&intctrl>;
-                interrupts = <0 8>; /* 0: is IRQ; 1: IRQ line */
+                interrupts = <1 8>; /* 0: is IRQ; 1: IRQ line */
                 comm = <0x70 0x71>;
                 qartz-freq = <32768>;
                 freq = <2>;
@@ -86,24 +86,36 @@
             compatible = "x86,x86-generic-serial";
             comm = <0x3F8>;
             baudrate = <115200>;
+            interrupt-parent = <&intctrl>;
+            // TODO: UARTdriver does not support interrupt for now
+            //interrupts = <1 3>; /* 0: is IRQ; 1: IRQ line */
         };
 
         uart1 {
             compatible = "x86,x86-generic-serial";
             comm = <0x2F8>;
             baudrate = <115200>;
+            interrupt-parent = <&intctrl>;
+            // TODO: UARTdriver does not support interrupt for now
+            //interrupts = <1 4>; /* 0: is IRQ; 1: IRQ line */
         };
 
         uart2 {
             compatible = "x86,x86-generic-serial";
             comm = <0x3E8>;
             baudrate = <115200>;
+            interrupt-parent = <&intctrl>;
+            // TODO: UARTdriver does not support interrupt for now
+            //interrupts = <1 3>; /* 0: is IRQ; 1: IRQ line */
         };
 
         uart3 {
             compatible = "x86,x86-generic-serial";
             comm = <0x2E8>;
             baudrate = <115200>;
+            interrupt-parent = <&intctrl>;
+            // TODO: UARTdriver does not support interrupt for now
+            // interrupts = <1 4>; /* 0: is IRQ; 1: IRQ line */
         };
     };
 };
