Cleaned code and minor bug fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,13 @@
         "vgatext.h": "c",
         "config.h": "c",
         "stdint.h": "c",
-        "ctrl_block.h": "c"
+        "ctrl_block.h": "c",
+        "__bit_reference": "c",
+        "bitset": "c",
+        "__memory": "c",
+        "limits": "c",
+        "locale": "c",
+        "ratio": "c",
+        "tuple": "c"
     }
 }
