Cleaned code, added documentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "limits": "c",
         "locale": "c",
         "ratio": "c",
-        "tuple": "c"
+        "tuple": "c",
+        "compare": "c"
     }
 }
