Added bunch of timers, IO APIC, LAPIC, ACPI and updated devmanager to get handles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,9 @@
         "locale": "c",
         "ratio": "c",
         "tuple": "c",
-        "compare": "c"
+        "compare": "c",
+        "kerror.h": "c",
+        "critical.h": "c",
+        "ioapic.h": "c"
     }
 }
