--- a/Source/Config/Arch/x86_64/x86_64_fdt.dts
+++ b/Source/Config/Arch/x86_64/x86_64_fdt.dts
@@ -9,19 +9,19 @@
     cpus {
         #address-cells = <2>;
         #size-cells = <0>;
-        cpu@0 {
+        cpu0: cpu@0 {
             compatible = "generic,i386";
             reg = <0x0 0x0>;
         };
-        cpu@1 {
+        cpu1: cpu@1 {
             compatible = "generic,i386";
             reg = <0x0 0x1>;
         };
-        cpu@2 {
+        cpu2: cpu@2 {
             compatible = "generic,i386";
             reg = <0x0 0x2>;
         };
-        cpu@3 {
+        cpu3: cpu@3 {
             compatible = "generic,i386";
             reg = <0x0 0x3>;
         };
@@ -44,35 +44,92 @@
             is-console;
         };
 
-        /* Interrupt controller must be placed before any device using
-         * interrupts.
-         */
-        intctrl: interrupt-controller {
-            compatible = "x86,x86-pic";
-            interrupt-controller;
-            #address-cells = <0>;
-            #interrupt-cells = <2>;
-            int-offset = <0x30>;
-            is-chained;
-            comm = <0x20 0x21 0xA0 0xA1>;
-            status = "okay";
+        acpi: acpi@E0000 {
+            compatible = "x86,x86-acpi";
+            reg = <0x0 0x000E0000 0x0 0x0001FFFF>;
         };
 
+        lapic: local-apic {
+            compatible = "x86,x86-lapic";
+            cpu = <&cpu0 &cpu1 &cpu2 &cpu3>;
+            acpi-node = <&acpi>;
+        };
+
+        /* Interrupt controller must be placed before any device using
+         * interrupts.
+         *
+         * Only one controller be set as interrupt-controller, the rest should
+         * must be disabled by commenting or removinf the attribute.
+         * It is important to keep all node to ensure the hardware is corrtly
+         * initialized. The node can be removed if the component is just not
+         * present.
+         */
+        interrupt-controllers {
+            pic {
+                compatible = "x86,x86-pic";
+                //interrupt-controller;
+                #address-cells = <0>;
+                #interrupt-cells = <2>;
+                int-offset = <0x30>;
+                is-chained;
+                comm = <0x20 0x21 0xA0 0xA1>;
+            };
+
+            io-apic {
+                compatible = "x86,x86-io-apic";
+                interrupt-controller;
+                #address-cells = <0>;
+                #interrupt-cells = <2>;
+                int-offset = <0x30>;
+                acpi-node = <&acpi>;
+                lapic-node = <&lapic>;
+            };
+        };
+
+        /* PIT capabilities (global, synchronized, interrupt):
+         *    * is-main
+         *    * is-aux (or blank)
+         *
+         * RTC capabilities (global, synchronized, interrupt):
+         *    * is-rtc
+         *    * is-aux (or blank)
+         *
+         * TSC capabilities (per CPU, unsinchronized, no interrupt):
+         *    * is-lifetime
+         *    * is-aux (or blank)
+         *
+         * HPET capabilities (global, synchronized, interrupt):
+         *    * is-main
+         *    * is-lifetime
+         *    * is-aux (or blank)
+         *
+         * LAPIC-Timer capabilities (per CPU, unsynchronized, interrupt):
+         *    * is-main
+         *    * is-aux (or blank)
+         *    * Note: the LAPIC timer needs a base timer to calibrate its
+         *            frequency. The base timerneeds to support returning the
+         *            current time in nanoseconds and must be as precise as
+         *            possible.
+         *
+         * Set PIT as is-main for compatibility, low precision but synchronized
+         * schedule and system ticks
+         * Set HPET to is-main for global schedule and system ticks
+         * synchronization over all CPUS.
+         * Set LAPIC-Timers as is-main for more precise but unsynchronized
+         * schedule and system ticks
+         */
         timers {
             pit {
                 compatible = "x86,x86-pit";
-                interrupt-parent = <&intctrl>;
                 interrupts = <1 0>; /* 0: is IRQ; 1: IRQ line */
                 comm = <0x34 0x40>;
                 qartz-freq = <0x1234DD>;
                 freq = <500>;
                 freq-range = <20 8000>;
-                is-main;
             };
 
             rtc {
                 compatible = "x86,x86-rtc";
-                interrupt-parent = <&intctrl>;
                 interrupts = <1 8>; /* 0: is IRQ; 1: IRQ line */
                 comm = <0x70 0x71>;
                 qartz-freq = <32768>;
@@ -80,13 +137,31 @@
                 freq-range = <2 8192>;
                 is-rtc;
             };
+
+            basetime: tsc {
+                compatible = "x86,x86-tsc";
+                freq = <3600000000>;
+                is-lifetime;
+            };
+
+            lapic-timer {
+                compatible = "x86,x86-lapic-timer";
+                interrupts = <0 0x21>; /* 0: is not IRQ; 1: Int line */
+                freq = <500>;
+                freq-range = <1 10000>;
+                /* The current hardware has a fixed-rate TSC that is the most
+                 * precise way to measure time.
+                 */
+                base-timer = <&basetime>;
+                lapic-node = <&lapic>;
+                is-main;
+            };
         };
 
         uart0 {
             compatible = "x86,x86-generic-serial";
             comm = <0x3F8>;
             baudrate = <115200>;
-            interrupt-parent = <&intctrl>;
             // TODO: UARTdriver does not support interrupt for now
             //interrupts = <1 3>; /* 0: is IRQ; 1: IRQ line */
         };
@@ -95,7 +170,6 @@
             compatible = "x86,x86-generic-serial";
             comm = <0x2F8>;
             baudrate = <115200>;
-            interrupt-parent = <&intctrl>;
             // TODO: UARTdriver does not support interrupt for now
             //interrupts = <1 4>; /* 0: is IRQ; 1: IRQ line */
         };
@@ -104,7 +178,6 @@
             compatible = "x86,x86-generic-serial";
             comm = <0x3E8>;
             baudrate = <115200>;
-            interrupt-parent = <&intctrl>;
             // TODO: UARTdriver does not support interrupt for now
             //interrupts = <1 3>; /* 0: is IRQ; 1: IRQ line */
         };
@@ -113,7 +186,6 @@
             compatible = "x86,x86-generic-serial";
             comm = <0x2E8>;
             baudrate = <115200>;
-            interrupt-parent = <&intctrl>;
             // TODO: UARTdriver does not support interrupt for now
             // interrupts = <1 4>; /* 0: is IRQ; 1: IRQ line */
         };
