Added SMP for 64 bits and memory manager

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,9 @@
         "compare": "c",
         "kerror.h": "c",
         "critical.h": "c",
-        "ioapic.h": "c"
+        "ioapic.h": "c",
+        "*.c_no": "c",
+        "tracing.h": "c",
+        "x86memory.h": "c"
     }
 }
