--- a/Source/Makefile
+++ b/Source/Makefile
@@ -44,6 +44,7 @@ ifeq ($(target), x86_i386)
 	@make -C $(SOURCE_DIR)/io target_board=x86 target_cpu=i386
 	@make -C $(SOURCE_DIR)/time target_board=x86 target_cpu=i386
 	@make -C $(SOURCE_DIR)/libs target_board=x86 target_cpu=i386
+	@make -C $(SOURCE_DIR)/user target_board=x86 target_cpu=i386
 else ifeq ($(target), x86_64)
 # Build the architecture module
 	@make -C $(SOURCE_DIR)/arch target_board=x86 target_cpu=x86_64
@@ -51,6 +52,7 @@ else ifeq ($(target), x86_64)
 	@make -C $(SOURCE_DIR)/io target_board=x86 target_cpu=x86_64
 	@make -C $(SOURCE_DIR)/time target_board=x86 target_cpu=x86_64
 	@make -C $(SOURCE_DIR)/libs target_board=x86 target_cpu=x86_64
+	@make -C $(SOURCE_DIR)/user target_board=x86 target_cpu=x86_64
 else
 	@echo "\e[1m\e[31m\n=== ERROR: Unknown target $(target)\e[22m\e[39m"
 	@echo "Available targets: $(TARGET_LIST)\n"
