--- a/Source/Config/arch/x86_64/x86_64_fdt.dts
+++ b/Source/Config/arch/x86_64/x86_64_fdt.dts
@@ -51,10 +51,10 @@
         #address-cells = <2>;
         #size-cells = <2>;
 
-        /* Place the VGA node first to get output on the VGA (eraly init) */
+        /* Place the VGA node first to get output on the VGA (early init) */
         vga@B8000 {
             compatible = "x86,x86-vga-text";
-            reg = <0x0 0xB8000 0x0 0x7D00>;
+            reg = <0x0 0xB8000 0x0 0xFA0>;
             comm = <0x3D4 0x3D5>;
             resolution = <80 25>;
             is-console;
