--- a/Source/Config/arch/x86_i386/x86_i386_fdt.dts
+++ b/Source/Config/arch/x86_i386/x86_i386_fdt.dts
@@ -54,7 +54,7 @@
         /* Place the VGA node first to get output on the VGA (early init) */
         vga@B8000 {
             compatible = "x86,x86-vga-text";
-            reg = <0xB8000 0x7D00>;
+            reg = <0xB8000 0xFA0>;
             comm = <0x3D4 0x3D5>;
             resolution = <80 25>;
             is-console;
