--- a/Source/Makefile
+++ b/Source/Makefile
@@ -91,6 +91,7 @@ ifeq ($(target), x86_i386)
 	@make -C $(SOURCE_DIR)/io target_board=x86 target_cpu=i386 clean
 	@make -C $(SOURCE_DIR)/time target_board=x86 target_cpu=i386 clean
 	@make -C $(SOURCE_DIR)/libs target_board=x86 target_cpu=i386 clean
+	@make -C $(SOURCE_DIR)/user target_board=x86 target_cpu=i386 clean
 	@make -C $(SOURCE_DIR)/test_framework target=$(target) clean
 else ifeq ($(target), x86_64)
 	@make -C $(SOURCE_DIR)/arch target_board=x86 target_cpu=x86_64 clean
@@ -98,6 +99,7 @@ else ifeq ($(target), x86_64)
 	@make -C $(SOURCE_DIR)/io target_board=x86 target_cpu=x86_64 clean
 	@make -C $(SOURCE_DIR)/time target_board=x86 target_cpu=x86_64 clean
 	@make -C $(SOURCE_DIR)/libs target_board=x86 target_cpu=x86_64 clean
+	@make -C $(SOURCE_DIR)/user target_board=x86 target_cpu=x86_64 clean
 	@make -C $(SOURCE_DIR)/test_framework target=$(target) clean
 else
 	@make -C $(SOURCE_DIR)/arch target_board=x86 target_cpu=i386 clean
@@ -110,6 +112,8 @@ else
 	@make -C $(SOURCE_DIR)/time target_board=x86 target_cpu=x86_64 clean
 	@make -C $(SOURCE_DIR)/libs target_board=x86 target_cpu=i386 clean
 	@make -C $(SOURCE_DIR)/libs target_board=x86 target_cpu=x86_64 clean
+	@make -C $(SOURCE_DIR)/user target_board=x86 target_cpu=i386 clean
+	@make -C $(SOURCE_DIR)/user target_board=x86 target_cpu=x86_64 clean
 	@make -C $(SOURCE_DIR)/test_framework target=$(target) clean
 endif
 
