Added futex and updated tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "ioapic.h": "c",
         "*.c_no": "c",
         "tracing.h": "c",
-        "x86memory.h": "c"
+        "x86memory.h": "c",
+        "x86cpu.h": "c"
     }
 }
