--- a/Source/Config/arch/x86_i386/x86_i386_fdt.dts
+++ b/Source/Config/arch/x86_i386/x86_i386_fdt.dts
@@ -51,15 +51,6 @@
         #address-cells = <1>;
         #size-cells = <1>;
 
-        /* Place the VGA node first to get output on the VGA (early init) */
-        vga@B8000 {
-            compatible = "x86,x86-vga-text";
-            reg = <0xB8000 0xFA0>;
-            comm = <0x3D4 0x3D5>;
-            resolution = <80 25>;
-            is-console;
-        };
-
         acpi: acpi@E0000 {
             compatible = "x86,x86-acpi";
             reg = <0xE0000 0x20000>;
@@ -151,7 +142,7 @@
                 qartz-freq = <32768>;
                 freq = <2>;
                 freq-range = <2 8192>;
-                is-rtc;
+                //is-rtc;
             };
 
             basetime: tsc {
@@ -170,40 +161,45 @@
                  */
                 base-timer = <&basetime>;
                 lapic-node = <&lapic>;
-                is-main;
+                //is-main;
             };
         };
 
-        uart0 {
+        stdoutdev: vga@B8000 {
+            compatible = "x86,x86-vga-text";
+            reg = <0xB8000 0xFA0>;
+            comm = <0x3D4 0x3D5>;
+            resolution = <80 25>;
+        };
+
+        stdindev: uart0 {
             compatible = "x86,x86-generic-serial";
             comm = <0x3F8>;
             baudrate = <115200>;
-            // TODO: UARTdriver does not support interrupt for now
-            //interrupts = <1 3>; /* 0: is IRQ; 1: IRQ line */
+            interrupts = <1 4>; /* 0: is IRQ; 1: IRQ line */
         };
 
         uart1 {
             compatible = "x86,x86-generic-serial";
             comm = <0x2F8>;
             baudrate = <115200>;
-            // TODO: UARTdriver does not support interrupt for now
-            //interrupts = <1 4>; /* 0: is IRQ; 1: IRQ line */
         };
 
         uart2 {
             compatible = "x86,x86-generic-serial";
             comm = <0x3E8>;
             baudrate = <115200>;
-            // TODO: UARTdriver does not support interrupt for now
-            //interrupts = <1 3>; /* 0: is IRQ; 1: IRQ line */
         };
 
         uart3 {
             compatible = "x86,x86-generic-serial";
             comm = <0x2E8>;
             baudrate = <115200>;
-            // TODO: UARTdriver does not support interrupt for now
-            // interrupts = <1 4>; /* 0: is IRQ; 1: IRQ line */
         };
+    };
+
+    console {
+        inputdev = <&stdindev>;
+        outputdev = <&stdoutdev>;
     };
 };
