Fixed futex wake and tests

--- a/Source/Config/arch/x86_i386/x86_i386_fdt.dts
+++ b/Source/Config/arch/x86_i386/x86_i386_fdt.dts
@@ -142,7 +142,7 @@
                 qartz-freq = <32768>;
                 freq = <2>;
                 freq-range = <2 8192>;
-                //is-rtc;
+                is-rtc;
             };
 
             basetime: tsc {
@@ -161,7 +161,7 @@
                  */
                 base-timer = <&basetime>;
                 lapic-node = <&lapic>;
-                //is-main;
+                is-main;
             };
         };
 
