--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "x86cpu.h": "c",
         "core_mgt.h": "c",
         "kqueue.h": "c",
-        "spinlock.h": "c"
+        "spinlock.h": "c",
+        "stdlib.h": "c"
     }
 }
